# unit-text

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/unit_text/: __init__.py  app.py  cli.py
src/unit_text/api/: __init__.py  __main__.py  app.py  server.py
src/unit_text/cli/: app.py
src/unit_text/core/: __init__.py  lib.py
