[project]
name = "unit-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giorgio Azzinnaro", email = "giorgio@azzinna.ro" }
]
requires-python = ">=3.11"
dependencies = [
    "dicttoxml>=1.7.16",
    "langroid[doc-chat,hf-embeddings,weaviate]>=0.36.1",
    "ollama>=0.4.7",
    "pydantic<3.0.0,>=1",
    "python-magic>=0.4.27",
    "sentence-transformers>=2.7.0",
    "tomlkit>=0.13.2",
    "typer>=0.15.1",
]

[project.scripts]
unit-text = "unit_text:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.1.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
annotated_tags = true
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
